# Exemplo_Arquitetura_Hexagonal

./: .coverage  .gitignore  README.md  pyproject.toml
src/: configuration.py  main.py
src/adapters/: Readme.md
src/adapters/database/: mongo.py
src/domain/: Readme.md
src/domain/actions/database/: database.py
src/domain/actions/pedido/: get_pedidos.py  post_pedido.py
src/domain/interfaces/database/: database.py
src/domain/interfaces/pedido/: pedido.py  pedidoInterface.py
src/domain/usecase/pedido/: pedido.py
src/web/: Readme.md  __init__.py
src/web/pedido/: pedido.py
tests/: Readme.md
tests/adapters/database/: test_mongo.py
tests/domain/actions/pedido/: test_get_pedidos.py
tests/domain/usecase/pedido/: test_pedido.py
tests/web/pedido/: test_pedido.py
